Make the error messages big and red

--- a/static/css/calc.css
+++ b/static/css/calc.css
@@ -66,3 +66,9 @@ button {
     font-size: 150%;
     border-radius: 15px;
 }
+
+.error {
+    color: red;
+    font-size: 300%;
+    font-weight: bold;
+}
